Transator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    DRIGHT
    RETURN

Grammar

Rule 0     S' -> start
Rule 1     start -> imports start
Rule 2     start -> function start
Rule 3     start -> comment start
Rule 4     start -> empty
Rule 5     index -> variable
Rule 6     index -> literal
Rule 7     index -> expression
Rule 8     brackets -> LBRACKET index RBRACKET brackets
Rule 9     brackets -> LBRACKET index RBRACKET
Rule 10    array -> ID brackets
Rule 11    variable -> ID
Rule 12    variable -> array
Rule 13    var_assign -> variable ASSIGN expression
Rule 14    var_assign -> type variable ASSIGN expression
Rule 15    if_else_statement -> if_statement
Rule 16    if_else_statement -> if_statement else_if_statement else_statement
Rule 17    if_else_statement -> if_statement else_statement
Rule 18    if_statement -> IF LPAREN boolean_expr RPAREN LBRACE body RBRACE
Rule 19    if_statement -> IF LPAREN boolean_expr RPAREN var_assign SEMICOLON
Rule 20    else_if_statement -> ELSE IF LPAREN boolean_expr RPAREN LBRACE body RBRACE else_if_statement
Rule 21    else_if_statement -> ELSE IF LPAREN boolean_expr RPAREN var_assign SEMICOLON
Rule 22    else_if_statement -> empty
Rule 23    else_statement -> ELSE LBRACE body RBRACE
Rule 24    else_statement -> ELSE var_assign SEMICOLON
Rule 25    while_loop -> WHILE LPAREN boolean_expr RPAREN LBRACE body RBRACE
Rule 26    for_assign -> var_assign COMMA for_assign
Rule 27    for_assign -> var_assign
Rule 28    for_assign -> empty
Rule 29    increment -> variable PLUS PLUS
Rule 30    decrement -> variable MINUS MINUS
Rule 31    for_iteration -> var_assign COMMA for_iteration
Rule 32    for_iteration -> var_assign
Rule 33    for_iteration -> empty
Rule 34    for_loop -> FOR LPAREN for_assign SEMICOLON boolean_expr SEMICOLON for_iteration RPAREN LBRACE body RBRACE
Rule 35    comment -> COMMENT
Rule 36    imports -> INCLUDE imports
Rule 37    imports -> empty
Rule 38    operator -> PLUS
Rule 39    operator -> MINUS
Rule 40    operator -> DIVIDE
Rule 41    operator -> TIMES
Rule 42    bool_op -> AND
Rule 43    bool_op -> OR
Rule 44    compare_op -> GREATER
Rule 45    compare_op -> LESSER
Rule 46    compare_op -> EQUAL
Rule 47    compare_op -> NOTEQUAL
Rule 48    compare_op -> GREATER_EQUAL
Rule 49    compare_op -> LESSER_EQUAL
Rule 50    literal -> NUMBER
Rule 51    literal -> STR
Rule 52    literal -> bool_literal
Rule 53    bool_literal -> TRUE
Rule 54    bool_literal -> FALSE
Rule 55    type -> INT
Rule 56    type -> DOUBLE
Rule 57    type -> STRING
Rule 58    type -> BOOL
Rule 59    expression -> expression operator expression
Rule 60    expression -> LPAREN expression RPAREN
Rule 61    expression -> literal
Rule 62    expression -> function_call
Rule 63    expression -> variable
Rule 64    boolean_expr -> expression compare_op expression
Rule 65    boolean_expr -> NOT boolean_expr
Rule 66    boolean_expr -> boolean_expr bool_op boolean_expr
Rule 67    boolean_expr -> LPAREN boolean_expr RPAREN
Rule 68    boolean_expr -> bool_literal
Rule 69    function -> type ID LPAREN RPAREN LBRACE body RBRACE
Rule 70    call_args -> variable COMMA call_args
Rule 71    call_args -> empty
Rule 72    function_call -> ID LPAREN call_args RPAREN
Rule 73    empty -> <empty>
Rule 74    print -> STD NAMESPACE COUT DLEFT expression
Rule 75    body -> while_loop body
Rule 76    body -> for_loop body
Rule 77    body -> if_else_statement body
Rule 78    body -> expression SEMICOLON body
Rule 79    body -> var_assign SEMICOLON body
Rule 80    body -> print SEMICOLON body
Rule 81    body -> increment SEMICOLON body
Rule 82    body -> decrement SEMICOLON body
Rule 83    body -> comment body
Rule 84    body -> empty

Terminals, with rules where they appear

AND                  : 42
ASSIGN               : 13 14
BOOL                 : 58
COMMA                : 26 31 70
COMMENT              : 35
COUT                 : 74
DIVIDE               : 40
DLEFT                : 74
DOT                  : 
DOUBLE               : 56
DRIGHT               : 
ELSE                 : 20 21 23 24
EQUAL                : 46
FALSE                : 54
FOR                  : 34
GREATER              : 44
GREATER_EQUAL        : 48
ID                   : 10 11 69 72
IF                   : 18 19 20 21
INCLUDE              : 36
INT                  : 55
LBRACE               : 18 20 23 25 34 69
LBRACKET             : 8 9
LESSER               : 45
LESSER_EQUAL         : 49
LPAREN               : 18 19 20 21 25 34 60 67 69 72
MINUS                : 30 30 39
NAMESPACE            : 74
NOT                  : 65
NOTEQUAL             : 47
NUMBER               : 50
OR                   : 43
PLUS                 : 29 29 38
RBRACE               : 18 20 23 25 34 69
RBRACKET             : 8 9
RETURN               : 
RPAREN               : 18 19 20 21 25 34 60 67 69 72
SEMICOLON            : 19 21 24 34 34 78 79 80 81 82
STD                  : 74
STR                  : 51
STRING               : 57
TIMES                : 41
TRUE                 : 53
WHILE                : 25
error                : 

Nonterminals, with rules where they appear

array                : 12
body                 : 18 20 23 25 34 69 75 76 77 78 79 80 81 82 83
bool_literal         : 52 68
bool_op              : 66
boolean_expr         : 18 19 20 21 25 34 65 66 66 67
brackets             : 8 10
call_args            : 70 72
comment              : 3 83
compare_op           : 64
decrement            : 82
else_if_statement    : 16 20
else_statement       : 16 17
empty                : 4 22 28 33 37 71 84
expression           : 7 13 14 59 59 60 64 64 74 78
for_assign           : 26 34
for_iteration        : 31 34
for_loop             : 76
function             : 2
function_call        : 62
if_else_statement    : 77
if_statement         : 15 16 17
imports              : 1 36
increment            : 81
index                : 8 9
literal              : 6 61
operator             : 59
print                : 80
start                : 1 2 3 0
type                 : 14 69
var_assign           : 19 21 24 26 27 31 32 79
variable             : 5 13 14 29 30 63 70
while_loop           : 75

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . imports start
    (2) start -> . function start
    (3) start -> . comment start
    (4) start -> . empty
    (36) imports -> . INCLUDE imports
    (37) imports -> . empty
    (69) function -> . type ID LPAREN RPAREN LBRACE body RBRACE
    (35) comment -> . COMMENT
    (73) empty -> .
    (55) type -> . INT
    (56) type -> . DOUBLE
    (57) type -> . STRING
    (58) type -> . BOOL

  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    INCLUDE         shift and go to state 6
    COMMENT         shift and go to state 8
    $end            reduce using rule 73 (empty -> .)
    INT             shift and go to state 9
    DOUBLE          shift and go to state 10
    STRING          shift and go to state 11
    BOOL            shift and go to state 12

  ! INCLUDE         [ reduce using rule 73 (empty -> .) ]
  ! COMMENT         [ reduce using rule 73 (empty -> .) ]
  ! INT             [ reduce using rule 73 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 73 (empty -> .) ]
  ! STRING          [ reduce using rule 73 (empty -> .) ]
  ! BOOL            [ reduce using rule 73 (empty -> .) ]

    start                          shift and go to state 1
    imports                        shift and go to state 2
    function                       shift and go to state 3
    comment                        shift and go to state 4
    empty                          shift and go to state 5
    type                           shift and go to state 7

state 1

    (0) S' -> start .



state 2

    (1) start -> imports . start
    (1) start -> . imports start
    (2) start -> . function start
    (3) start -> . comment start
    (4) start -> . empty
    (36) imports -> . INCLUDE imports
    (37) imports -> . empty
    (69) function -> . type ID LPAREN RPAREN LBRACE body RBRACE
    (35) comment -> . COMMENT
    (73) empty -> .
    (55) type -> . INT
    (56) type -> . DOUBLE
    (57) type -> . STRING
    (58) type -> . BOOL

  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    INCLUDE         shift and go to state 6
    COMMENT         shift and go to state 8
    $end            reduce using rule 73 (empty -> .)
    INT             shift and go to state 9
    DOUBLE          shift and go to state 10
    STRING          shift and go to state 11
    BOOL            shift and go to state 12

  ! INCLUDE         [ reduce using rule 73 (empty -> .) ]
  ! COMMENT         [ reduce using rule 73 (empty -> .) ]
  ! INT             [ reduce using rule 73 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 73 (empty -> .) ]
  ! STRING          [ reduce using rule 73 (empty -> .) ]
  ! BOOL            [ reduce using rule 73 (empty -> .) ]

    imports                        shift and go to state 2
    start                          shift and go to state 13
    function                       shift and go to state 3
    comment                        shift and go to state 4
    empty                          shift and go to state 5
    type                           shift and go to state 7

state 3

    (2) start -> function . start
    (1) start -> . imports start
    (2) start -> . function start
    (3) start -> . comment start
    (4) start -> . empty
    (36) imports -> . INCLUDE imports
    (37) imports -> . empty
    (69) function -> . type ID LPAREN RPAREN LBRACE body RBRACE
    (35) comment -> . COMMENT
    (73) empty -> .
    (55) type -> . INT
    (56) type -> . DOUBLE
    (57) type -> . STRING
    (58) type -> . BOOL

  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    INCLUDE         shift and go to state 6
    COMMENT         shift and go to state 8
    $end            reduce using rule 73 (empty -> .)
    INT             shift and go to state 9
    DOUBLE          shift and go to state 10
    STRING          shift and go to state 11
    BOOL            shift and go to state 12

  ! INCLUDE         [ reduce using rule 73 (empty -> .) ]
  ! COMMENT         [ reduce using rule 73 (empty -> .) ]
  ! INT             [ reduce using rule 73 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 73 (empty -> .) ]
  ! STRING          [ reduce using rule 73 (empty -> .) ]
  ! BOOL            [ reduce using rule 73 (empty -> .) ]

    function                       shift and go to state 3
    start                          shift and go to state 14
    imports                        shift and go to state 2
    comment                        shift and go to state 4
    empty                          shift and go to state 5
    type                           shift and go to state 7

state 4

    (3) start -> comment . start
    (1) start -> . imports start
    (2) start -> . function start
    (3) start -> . comment start
    (4) start -> . empty
    (36) imports -> . INCLUDE imports
    (37) imports -> . empty
    (69) function -> . type ID LPAREN RPAREN LBRACE body RBRACE
    (35) comment -> . COMMENT
    (73) empty -> .
    (55) type -> . INT
    (56) type -> . DOUBLE
    (57) type -> . STRING
    (58) type -> . BOOL

  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    INCLUDE         shift and go to state 6
    COMMENT         shift and go to state 8
    $end            reduce using rule 73 (empty -> .)
    INT             shift and go to state 9
    DOUBLE          shift and go to state 10
    STRING          shift and go to state 11
    BOOL            shift and go to state 12

  ! INCLUDE         [ reduce using rule 73 (empty -> .) ]
  ! COMMENT         [ reduce using rule 73 (empty -> .) ]
  ! INT             [ reduce using rule 73 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 73 (empty -> .) ]
  ! STRING          [ reduce using rule 73 (empty -> .) ]
  ! BOOL            [ reduce using rule 73 (empty -> .) ]

    comment                        shift and go to state 4
    start                          shift and go to state 15
    imports                        shift and go to state 2
    function                       shift and go to state 3
    empty                          shift and go to state 5
    type                           shift and go to state 7

state 5

    (4) start -> empty .
    (37) imports -> empty .

  ! reduce/reduce conflict for $end resolved using rule 4 (start -> empty .)
    $end            reduce using rule 4 (start -> empty .)
    INCLUDE         reduce using rule 37 (imports -> empty .)
    COMMENT         reduce using rule 37 (imports -> empty .)
    INT             reduce using rule 37 (imports -> empty .)
    DOUBLE          reduce using rule 37 (imports -> empty .)
    STRING          reduce using rule 37 (imports -> empty .)
    BOOL            reduce using rule 37 (imports -> empty .)

  ! $end            [ reduce using rule 37 (imports -> empty .) ]


state 6

    (36) imports -> INCLUDE . imports
    (36) imports -> . INCLUDE imports
    (37) imports -> . empty
    (73) empty -> .

  ! shift/reduce conflict for INCLUDE resolved as shift
    INCLUDE         shift and go to state 6
    COMMENT         reduce using rule 73 (empty -> .)
    INT             reduce using rule 73 (empty -> .)
    DOUBLE          reduce using rule 73 (empty -> .)
    STRING          reduce using rule 73 (empty -> .)
    BOOL            reduce using rule 73 (empty -> .)
    $end            reduce using rule 73 (empty -> .)

  ! INCLUDE         [ reduce using rule 73 (empty -> .) ]

    imports                        shift and go to state 16
    empty                          shift and go to state 17

state 7

    (69) function -> type . ID LPAREN RPAREN LBRACE body RBRACE

    ID              shift and go to state 18


state 8

    (35) comment -> COMMENT .

    INCLUDE         reduce using rule 35 (comment -> COMMENT .)
    COMMENT         reduce using rule 35 (comment -> COMMENT .)
    INT             reduce using rule 35 (comment -> COMMENT .)
    DOUBLE          reduce using rule 35 (comment -> COMMENT .)
    STRING          reduce using rule 35 (comment -> COMMENT .)
    BOOL            reduce using rule 35 (comment -> COMMENT .)
    $end            reduce using rule 35 (comment -> COMMENT .)
    WHILE           reduce using rule 35 (comment -> COMMENT .)
    FOR             reduce using rule 35 (comment -> COMMENT .)
    LPAREN          reduce using rule 35 (comment -> COMMENT .)
    STD             reduce using rule 35 (comment -> COMMENT .)
    IF              reduce using rule 35 (comment -> COMMENT .)
    NUMBER          reduce using rule 35 (comment -> COMMENT .)
    STR             reduce using rule 35 (comment -> COMMENT .)
    ID              reduce using rule 35 (comment -> COMMENT .)
    TRUE            reduce using rule 35 (comment -> COMMENT .)
    FALSE           reduce using rule 35 (comment -> COMMENT .)
    RBRACE          reduce using rule 35 (comment -> COMMENT .)


state 9

    (55) type -> INT .

    ID              reduce using rule 55 (type -> INT .)


state 10

    (56) type -> DOUBLE .

    ID              reduce using rule 56 (type -> DOUBLE .)


state 11

    (57) type -> STRING .

    ID              reduce using rule 57 (type -> STRING .)


state 12

    (58) type -> BOOL .

    ID              reduce using rule 58 (type -> BOOL .)


state 13

    (1) start -> imports start .

    $end            reduce using rule 1 (start -> imports start .)


state 14

    (2) start -> function start .

    $end            reduce using rule 2 (start -> function start .)


state 15

    (3) start -> comment start .

    $end            reduce using rule 3 (start -> comment start .)


state 16

    (36) imports -> INCLUDE imports .

    INCLUDE         reduce using rule 36 (imports -> INCLUDE imports .)
    COMMENT         reduce using rule 36 (imports -> INCLUDE imports .)
    INT             reduce using rule 36 (imports -> INCLUDE imports .)
    DOUBLE          reduce using rule 36 (imports -> INCLUDE imports .)
    STRING          reduce using rule 36 (imports -> INCLUDE imports .)
    BOOL            reduce using rule 36 (imports -> INCLUDE imports .)
    $end            reduce using rule 36 (imports -> INCLUDE imports .)


state 17

    (37) imports -> empty .

    INCLUDE         reduce using rule 37 (imports -> empty .)
    COMMENT         reduce using rule 37 (imports -> empty .)
    INT             reduce using rule 37 (imports -> empty .)
    DOUBLE          reduce using rule 37 (imports -> empty .)
    STRING          reduce using rule 37 (imports -> empty .)
    BOOL            reduce using rule 37 (imports -> empty .)
    $end            reduce using rule 37 (imports -> empty .)


state 18

    (69) function -> type ID . LPAREN RPAREN LBRACE body RBRACE

    LPAREN          shift and go to state 19


state 19

    (69) function -> type ID LPAREN . RPAREN LBRACE body RBRACE

    RPAREN          shift and go to state 20


state 20

    (69) function -> type ID LPAREN RPAREN . LBRACE body RBRACE

    LBRACE          shift and go to state 21


state 21

    (69) function -> type ID LPAREN RPAREN LBRACE . body RBRACE
    (75) body -> . while_loop body
    (76) body -> . for_loop body
    (77) body -> . if_else_statement body
    (78) body -> . expression SEMICOLON body
    (79) body -> . var_assign SEMICOLON body
    (80) body -> . print SEMICOLON body
    (81) body -> . increment SEMICOLON body
    (82) body -> . decrement SEMICOLON body
    (83) body -> . comment body
    (84) body -> . empty
    (25) while_loop -> . WHILE LPAREN boolean_expr RPAREN LBRACE body RBRACE
    (34) for_loop -> . FOR LPAREN for_assign SEMICOLON boolean_expr SEMICOLON for_iteration RPAREN LBRACE body RBRACE
    (15) if_else_statement -> . if_statement
    (16) if_else_statement -> . if_statement else_if_statement else_statement
    (17) if_else_statement -> . if_statement else_statement
    (59) expression -> . expression operator expression
    (60) expression -> . LPAREN expression RPAREN
    (61) expression -> . literal
    (62) expression -> . function_call
    (63) expression -> . variable
    (13) var_assign -> . variable ASSIGN expression
    (14) var_assign -> . type variable ASSIGN expression
    (74) print -> . STD NAMESPACE COUT DLEFT expression
    (29) increment -> . variable PLUS PLUS
    (30) decrement -> . variable MINUS MINUS
    (35) comment -> . COMMENT
    (73) empty -> .
    (18) if_statement -> . IF LPAREN boolean_expr RPAREN LBRACE body RBRACE
    (19) if_statement -> . IF LPAREN boolean_expr RPAREN var_assign SEMICOLON
    (50) literal -> . NUMBER
    (51) literal -> . STR
    (52) literal -> . bool_literal
    (72) function_call -> . ID LPAREN call_args RPAREN
    (11) variable -> . ID
    (12) variable -> . array
    (55) type -> . INT
    (56) type -> . DOUBLE
    (57) type -> . STRING
    (58) type -> . BOOL
    (53) bool_literal -> . TRUE
    (54) bool_literal -> . FALSE
    (10) array -> . ID brackets

    WHILE           shift and go to state 36
    FOR             shift and go to state 37
    LPAREN          shift and go to state 24
    STD             shift and go to state 42
    COMMENT         shift and go to state 8
    RBRACE          reduce using rule 73 (empty -> .)
    IF              shift and go to state 43
    NUMBER          shift and go to state 44
    STR             shift and go to state 45
    ID              shift and go to state 23
    INT             shift and go to state 9
    DOUBLE          shift and go to state 10
    STRING          shift and go to state 11
    BOOL            shift and go to state 12
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49

    type                           shift and go to state 22
    body                           shift and go to state 25
    while_loop                     shift and go to state 26
    for_loop                       shift and go to state 27
    if_else_statement              shift and go to state 28
    expression                     shift and go to state 29
    var_assign                     shift and go to state 30
    print                          shift and go to state 31
    increment                      shift and go to state 32
    decrement                      shift and go to state 33
    comment                        shift and go to state 34
    empty                          shift and go to state 35
    if_statement                   shift and go to state 38
    literal                        shift and go to state 39
    function_call                  shift and go to state 40
    variable                       shift and go to state 41
    bool_literal                   shift and go to state 46
    array                          shift and go to state 47

state 22

    (14) var_assign -> type . variable ASSIGN expression
    (11) variable -> . ID
    (12) variable -> . array
    (10) array -> . ID brackets

    ID              shift and go to state 51

    variable                       shift and go to state 50
    array                          shift and go to state 47

state 23

    (72) function_call -> ID . LPAREN call_args RPAREN
    (11) variable -> ID .
    (10) array -> ID . brackets
    (8) brackets -> . LBRACKET index RBRACKET brackets
    (9) brackets -> . LBRACKET index RBRACKET

    LPAREN          shift and go to state 52
    ASSIGN          reduce using rule 11 (variable -> ID .)
    PLUS            reduce using rule 11 (variable -> ID .)
    MINUS           reduce using rule 11 (variable -> ID .)
    SEMICOLON       reduce using rule 11 (variable -> ID .)
    DIVIDE          reduce using rule 11 (variable -> ID .)
    TIMES           reduce using rule 11 (variable -> ID .)
    RPAREN          reduce using rule 11 (variable -> ID .)
    RBRACKET        reduce using rule 11 (variable -> ID .)
    GREATER         reduce using rule 11 (variable -> ID .)
    LESSER          reduce using rule 11 (variable -> ID .)
    EQUAL           reduce using rule 11 (variable -> ID .)
    NOTEQUAL        reduce using rule 11 (variable -> ID .)
    GREATER_EQUAL   reduce using rule 11 (variable -> ID .)
    LESSER_EQUAL    reduce using rule 11 (variable -> ID .)
    COMMA           reduce using rule 11 (variable -> ID .)
    AND             reduce using rule 11 (variable -> ID .)
    OR              reduce using rule 11 (variable -> ID .)
    LBRACKET        shift and go to state 54

    brackets                       shift and go to state 53

state 24

    (60) expression -> LPAREN . expression RPAREN
    (59) expression -> . expression operator expression
    (60) expression -> . LPAREN expression RPAREN
    (61) expression -> . literal
    (62) expression -> . function_call
    (63) expression -> . variable
    (50) literal -> . NUMBER
    (51) literal -> . STR
    (52) literal -> . bool_literal
    (72) function_call -> . ID LPAREN call_args RPAREN
    (11) variable -> . ID
    (12) variable -> . array
    (53) bool_literal -> . TRUE
    (54) bool_literal -> . FALSE
    (10) array -> . ID brackets

    LPAREN          shift and go to state 24
    NUMBER          shift and go to state 44
    STR             shift and go to state 45
    ID              shift and go to state 23
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49

    expression                     shift and go to state 55
    literal                        shift and go to state 39
    function_call                  shift and go to state 40
    variable                       shift and go to state 56
    bool_literal                   shift and go to state 46
    array                          shift and go to state 47

state 25

    (69) function -> type ID LPAREN RPAREN LBRACE body . RBRACE

    RBRACE          shift and go to state 57


state 26

    (75) body -> while_loop . body
    (75) body -> . while_loop body
    (76) body -> . for_loop body
    (77) body -> . if_else_statement body
    (78) body -> . expression SEMICOLON body
    (79) body -> . var_assign SEMICOLON body
    (80) body -> . print SEMICOLON body
    (81) body -> . increment SEMICOLON body
    (82) body -> . decrement SEMICOLON body
    (83) body -> . comment body
    (84) body -> . empty
    (25) while_loop -> . WHILE LPAREN boolean_expr RPAREN LBRACE body RBRACE
    (34) for_loop -> . FOR LPAREN for_assign SEMICOLON boolean_expr SEMICOLON for_iteration RPAREN LBRACE body RBRACE
